<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="cancel">Cancel</string>

    <string name="settings_disable">Disable</string>
    <string name="settings_sign_out">Sign out</string>
    <string name="settings_fingerprint">Fingerprint</string>
    <string name="settings_enable_logs">Enable debug logs</string>
    <string name="settings_autofill">Autofill</string>
    <string name="settings_manage_accounts">Manage accounts</string>
    <string name="settings_terms">Terms &amp; Conditions</string>
    <string name="settings_privacy_policy">Privacy policy</string>
    <string name="settings_logs">Access the logs</string>
    <string name="settings_licenses">Open Source Licenses</string>
    <string name="settings_title">Settings</string>
    <string name="settings_disable_fingerprint_confirmation_title">Are you sure?</string>
    <string name="settings_disable_fingerprint_confirmation_message">After disabling Fingerprint you will need to login by using your passphrase.</string>
    <string name="settings_logout_dialog_title">Are you sure?</string>
    <string name="settings_logout_dialog_message">If you sign out you will need to sign in again.</string>
    <string name="settings_logout_dialog_sign_out">Sign out</string>
    <string name="settings_turn_on_biometric_title">Turn on fingerprint authentication</string>
    <string name="settings_turn_on_biometric_subtitle">Touch the fingerprint sensor</string>
    <string name="settings_add_first_fingerprint">Please add your fingerprint in the system settings first</string>
    <string name="settings_add_first_fingerprint_title">Configure fingerprint</string>
    <string name="settings_add_first_fingerprint_settings">Go to settings</string>

    <string name="settings_autofill_autofill_title">Here you can change autofill methods</string>
    <string name="settings_autofill_autofill_desc">It is recommended to use the Autofill Service method, but the Service performance may depend on your device and battery optimization settings. \n\nIf the Autofill Service is not working reliably on your device you can try enabling autofill based on Accessibility Service.</string>
    <string name="settings_autofill_autofill_service">Autofill Service (recommended)</string>
    <string name="settings_autofill_autofill_service_description">Autofill will be based on the recommended Autofill Service</string>
    <string name="settings_autofill_accessibility">Accessibility Service (legacy)</string>
    <string name="settings_autofill_accessibility_description">Autofill will be based on the Accessibility Service. You will need to approve additional permissions.</string>
    <string name="settings_autofill_autofill_service_not_supported">Autofill service is not supported on your device</string>
    <string name="settings_autofill_screen_title">Autofill settings</string>

    <string name="licenses_artifact">Artifact</string>
    <string name="licenses_name">Name</string>
    <string name="licenses_licensees">Licenses</string>
    <string name="licenses_urls">Urls</string>
</resources>
