<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/itemLicense"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dp_16"
    android:paddingVertical="@dimen/dp_8">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/licenses_artifact"
        android:textFontWeight="600"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/artifactLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/licenses_name"
        android:textFontWeight="600"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/licenses_licensees"
        android:textFontWeight="600"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/licenseIdLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/licenses_urls"
        android:textFontWeight="600"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/urlsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web" />

</LinearLayout>
