<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.passbolt.mobile.android.core.ui.toolbar.defaulttoolbar.TitleToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:theme="@style/Theme.Passbolt.Toolbar" />

    <TextView
        style="@style/Heading1Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_24"
        android:gravity="center"
        android:paddingHorizontal="@dimen/dp_16"
        android:text="@string/settings_autofill_autofill_title" />

    <TextView
        style="@style/BodyLight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:drawableTop="@drawable/autofill_with_bg"
        android:drawablePadding="@dimen/dp_16"
        android:gravity="center"
        android:paddingHorizontal="@dimen/dp_16"
        android:text="@string/settings_autofill_autofill_desc" />

    <!-- Switches are disabled -->
    <LinearLayout
        android:id="@+id/autofillServiceSwitchContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dp_16">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:text="@string/settings_autofill_autofill_service"
            android:textColor="@color/primary"
            android:textStyle="bold" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/autofillServiceSwitch"
            style="@style/AutofillSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:enabled="false"
            android:text="@string/settings_autofill_autofill_service_description" />
    </LinearLayout>

    <!-- Switches are disabled -->
    <LinearLayout
        android:id="@+id/accessibilityServiceSwitchContainer"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dp_16">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:text="@string/settings_autofill_accessibility"
            android:textColor="@color/primary"
            android:textStyle="bold" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/accessibilityServiceSwitch"
            style="@style/AutofillSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:enabled="false"
            android:text="@string/settings_autofill_accessibility_description" />
    </LinearLayout>

</LinearLayout>
